# rusty_coin

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
src/: block.rs  blockchain.rs  errors.rs  lib.rs  main.rs  transaction.rs  types.rs  wallet.rs
webgui/: package-lock.json
webgui/public/: index.html
webgui/src/: App.js
