[package]
name = "rusty_coin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
chrono = "0.4.31"
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"] }
sha2 = "0.10.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_bytes = "0.11.12"
hex = "0.4.3"
reqwest = "0.11.22"
secp256k1 = { version = "0.28.0", features = ["global-context","rand"] }
rand = "0.8.5"
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"